--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
 <h4>
 <a id="add-to-queue" class="anchor" href="#add-to-queue" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add to queue</h4>
 
-<p>You can add music to the queue by mentioning musicly and linking a Youtube video
-<code>@musicly https://www.youtube.com/watch?v=dQw4w9WgXcQ</code></p>
+<p>You can add music to the queue by mentioning musicly and linking a Youtube video</p>
+<p><code>@musicly https://www.youtube.com/watch?v=dQw4w9WgXcQ</code></p>
 
 <h4>
 <a id="view-queue" class="anchor" href="#view-queue" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>View queue</h4>
 
-<p>You can view the next 5 songs in the queue to asking about them
-<code>What songs are in the queue?</code></p>
+<p>You can view the next 5 songs in the queue to asking about them</p>
+<p><code>What songs are in the queue?</code></p>
 
 <h4>
 <a id="view-next-song" class="anchor" href="#view-next-song" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>View next song</h4>
 
-<p>You can also ask about the next song
-<code>What's the next song?</code></p>
+<p>You can also ask about the next song</p>
+<p><code>What's the next song?</code></p>
       </section>
     </div>
 
